--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,17 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run dev"
   },
   "dependencies": {
+    "@capacitor/app": "6.0.0",
+    "@capacitor/cli": "6.1.1",
+    "@capacitor/core": "6.1.1",
+    "@capacitor/haptics": "6.0.0",
+    "@capacitor/keyboard": "6.0.1",
+    "@capacitor/status-bar": "6.0.0",
     "@mdi/font": "6.2.95",
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
