--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,49 +1,38 @@
-name: Laravel Test
+name: Laravel
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.3'
-        
-    - uses: actions/checkout@v4
-    
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      working-directory: api
-      
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      working-directory: api
-      
-    - name: Generate key
-      run: php artisan key:generate
-      working-directory: api
-      
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-      working-directory: api
-      
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-      working-directory: api
-      
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
-      working-directory: api
-      
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        with:
+          php-version: "8.3"
+
+      - uses: actions/checkout@v4
+
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+        working-directory: api
+
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        working-directory: api
+
+      - name: Generate key
+        run: php artisan key:generate
+        working-directory: api
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+        working-directory: api
+
+      - name: Execute tests
+        run: php artisan test
+        working-directory: api
