--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Repository checkout
+        uses: actions/checkout@v4
 
-      - name: SSH
-        uses: cross-the-world/ssh-pipeline@v1.2.0
+      - name: Deploy to host
+        uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ secrets.HOST }},
-          user: ${{ secrets.USERNAME }},
-          pass: ${{ secrets.PASSWORD }},
-          connect_timeout: 10s
-          script: echo "test"
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          password: ${{ secrets.REMOTE_PASS }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: ${{ vars.SOURCE_DIR }}
+          target: ${{ vars.TARGET_DIR }}
