--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,18 @@ jobs:
           password: ${{ secrets.REMOTE_PASS }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            whoami
+            cd ${{ vars.TARGET_DIR }}/app
+            npm run build
+            cp -r dist/* ${{ vars.FRONTEND_DIR }}
+
+      - name: Restart the Backend
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          password: ${{ secrets.REMOTE_PASS }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ${{ vars.TARGET_DIR }}/api
+            vendor/bin/sail down -v
+            vendor/bin/sail up
