--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ vars.TARGET_DIR }}/app
+            npm install
             npm run build
             cp -r dist/* ${{ vars.FRONTEND_DIR }}
 
