--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,5 +45,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ vars.TARGET_DIR }}/api
+            composer install
             vendor/bin/sail down -v
             vendor/bin/sail up
