--- a/api/.env.example
+++ b/api/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=NoSpend
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_DEBUG=false
+APP_TIMEZONE=America/Sao_Paulo
 APP_URL=http://localhost
 
 APP_LOCALE=en
