ci: running laravel worker in the background

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,4 +47,4 @@ jobs:
             cp ${{ secrets.ENVIRONMENT_DIR }}/.env.api .env
             composer install
             php artisan key:generate
-            php artisan queue:work
+            php artisan queue:work &
